Add new register route
