# api/docs/swagger.yaml
@@ -22,14 +22,10 @@ definitions:
   Game:
     description: Game information between an employee and an user
     properties:
-      employee1:
-        $ref: '#/definitions/Employee'
       employee1ID:
         type: string
       employee1Score:
         type: integer
-      employee2:
-        $ref: '#/definitions/Employee'
       employee2ID:
         type: string
       employee2Score:
