# api/models/game.go
@@ -13,6 +13,6 @@ type Game struct {
 	Employee1Score int       `validate:"required"`
 	Employee2Score int       `validate:"required"`
 
-	Employee1 Employee `gorm:"foreignKey:Employee1ID"`
-	Employee2 Employee `gorm:"foreignKey:Employee2ID"`
+	Employee1 Employee `gorm:"foreignKey:Employee1ID" swaggerignore:"true"`
+	Employee2 Employee `gorm:"foreignKey:Employee2ID" swaggerignore:"true"`
 } //@name Game
